--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,23 @@
+
+@font-face {  
+  font-family: "CirrusCumulus";
+  src: local("CirrusCumulus"),
+  url(./asset/fonts/CirrusCumulus.otf) format("truetype");
+};
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-size: cover;
+  background-color: rgb(227, 217, 221);
+  background: linear-gradient(
+    185deg,
+    rgba(227, 217, 221, 1) 0%,
+    rgba(212, 232, 255, 1) 100%
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,21 +27,11 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: black;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  color: #05f73a;
 }
 
 body {
@@ -41,32 +42,30 @@ body {
   min-height: 100vh;
 }
 
+
+
 h1 {
-  font-size: 3.2em;
+  font-family: 'CirrusCumulus';
+  font-size: 7em;
+  color:rgb(15, 187, 235);
   line-height: 1.1;
 }
 
+
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  border: transparent;
+  font-size: 1.2em;
+  font-family: Open Sans;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #64ff86;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
 }
 
 #app {
@@ -78,13 +77,18 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    background-size: cover;
+    background-color: rgb(227, 217, 221);
+    background: linear-gradient(
+    185deg,
+    rgba(227, 217, 221, 1) 0%,
+    rgba(212, 232, 255, 1) 100%
+  );
   }
-  a:hover {
+  /* a:hover {
     color: #747bff;
   }
   button {
     background-color: #f9f9f9;
-  }
+  } */
 }
