--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,8 @@
-
-@font-face {  
+@font-face {
   font-family: "CirrusCumulus";
   src: local("CirrusCumulus"),
-  url(./asset/fonts/CirrusCumulus.otf) format("truetype");
-};
+    url(./asset/fonts/CirrusCumulus.otf) format("truetype");
+}
 
 :root {
   font-family: Arial, Helvetica, sans-serif;
@@ -27,8 +26,7 @@
 }
 
 a {
-  color:inherit;
-  ;
+  color: inherit;
   text-decoration: inherit;
 }
 
@@ -40,15 +38,12 @@ body {
   min-height: 100vh;
 }
 
-
-
 h1 {
-  color:rgb(237, 240, 243);
-  font-family: 'CirrusCumulus';
+  color: rgb(237, 240, 243);
+  font-family: "CirrusCumulus";
   font-size: 7em;
   line-height: 1.1;
 }
-
 
 button {
   color: inherit;
@@ -81,13 +76,9 @@ button:focus-visible {
     background-size: cover;
     background-color: rgb(227, 217, 221);
     background: linear-gradient(
-    185deg,
-    rgba(227, 217, 221, 1) 0%,
-    rgba(212, 232, 255, 1) 100%
-  );
+      185deg,
+      rgba(227, 217, 221, 1) 0%,
+      rgba(212, 232, 255, 1) 100%
+    );
   }
-  /* a:hover {
-    color: #747bff;
-  }
-  */
 }
