✨ add style and stop button

--- a/src/style.css
+++ b/src/style.css
@@ -25,26 +25,15 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #64ff86
-}
-
- body {
+body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-} 
+}
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
-
 }
 
 @media (prefers-color-scheme: light) {
